samples/_failures_safe/1761428760_518aad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cd44dcfc.c:169: error: expected ‘;’, ‘,’ or ‘)’ at end of input
